# rot-signals-api

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/middleware/: rate_limit.py
api/v1/routes/: health.py  keys.py  signals.py  ws.py
core/: auth.py  config.py  database.py  gating.py  models.py
tests/: conftest.py  test_api.py  test_auth.py  test_database.py  test_gating.py
