[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]

[project]
name = "rot-signals-api"
version = "1.0.0"
description = "REST + WebSocket API for Reddit Options Trader signals — real-time for paid, 15-min delayed for free"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["options", "trading", "signals", "api", "reddit", "fastapi", "websocket", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Auth & security
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",

    # Database
    "aiosqlite>=0.20",
    "aiofiles>=23.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Observability
    "structlog>=24.0",

    # HTTP client (for ROT integration)
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # TestClient
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
rot-api = "api.main:run"

[project.urls]
Homepage = "https://github.com/Mattbusel/rot-signals-api"
Repository = "https://github.com/Mattbusel/rot-signals-api"
"Source ROT" = "https://github.com/Mattbusel/Reddit-Options-Trader-ROT-"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
